--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <style>
+        button{
+            display: block;
+            margin: auto;
+            size: 1.3;
+        }
         p{
             font-family: sans-serif;
             font-size: 30px;
@@ -29,6 +34,6 @@
     </script>
 
     <p></p>
-    <button onclick="gentext();">KLIK</button>
+    <button class="btn" onclick="gentext();">KLIK</button>
 </body>
 </html>
