--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         button{
             display: block;
             margin: auto;
-            size: 1.3;
+            height: 70px;
         }
         p{
             font-family: sans-serif;
@@ -34,6 +34,6 @@
     </script>
 
     <p></p>
-    <button class="btn" onclick="gentext();">KLIK</button>
+    <button onclick="gentext();">KLIK</button>
 </body>
 </html>
