--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
             display: block;
             margin: auto;
             height: 70px;
+            width: 150px;
         }
         p{
             font-family: sans-serif;
             font-size: 30px;
             text-transform: uppercase;
+            margin: auto;
         }
     </style>
     <meta charset="UTF-8">
