--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             font-size: 30px;
             text-transform: uppercase;
             margin: auto;
+            position: center;
         }
     </style>
     <meta charset="UTF-8">
