--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             font-size: 30px;
             text-transform: uppercase;
             margin: auto;
-            position: center;
+            text-align: center;
         }
     </style>
     <meta charset="UTF-8">
