--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="en">
 <head>
     <style>
+        body{
+            padding: 0;
+            margin: 0;
+            background: black;
+        }
         button{
             display: block;
             margin: auto;
@@ -11,8 +16,8 @@
         p{
             font-family: sans-serif;
             font-size: 30px;
-            text-transform: uppercase;
-            margin: auto;
+            margin: 0;
+            padding: 0;
             text-align: center;
         }
     </style>
