--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
+            color: aliceblue;
         }
     </style>
     <meta charset="UTF-8">
