--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            color: aliceblue;
+            color: aliceblues;
         }
     </style>
     <meta charset="UTF-8">
