--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <style>
         body{
             padding: 0;
@@ -19,7 +20,7 @@
             margin: 0;
             padding: 0;
             text-align: center;
-            color: aliceblues;
+            color: aliceblue;
         }
     </style>
     <meta charset="UTF-8">
@@ -27,7 +28,8 @@
     <title>RANDOM KOTOBA</title>
 </head>
 <body>
-
+<div class="container">
+    <div class="center">
     <script>
         function gentext() {
             var word=['説明','書く','筆者','入学式','世界','昔','友達','赤い','抱く','泣く','続ける','寝る','建物','辞める','試験','混む','間違い','洗濯',
@@ -44,5 +46,7 @@
 
     <p></p>
     <button onclick="gentext();">KLIK</button>
+    </div>
+</div>
 </body>
 </html>
