--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
             margin: auto;
             height: 70px;
             width: 150px;
+            position: fixed;
+            top: 50%;
         }
         p{
             font-family: sans-serif;
@@ -21,6 +23,8 @@
             padding: 0;
             text-align: center;
             color: aliceblue;
+            position: fixed;
+            top: 40%;
         }
     </style>
     <meta charset="UTF-8">
