--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             width: 150px;
             position: fixed;
             top: 50%;
+            left: 40%;
         }
         p{
             font-family: sans-serif;
@@ -25,6 +26,7 @@
             color: aliceblue;
             position: fixed;
             top: 40%;
+            left: 40%;
         }
     </style>
     <meta charset="UTF-8">
