--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 '目的','最近','窓','健康','野菜','留守','製品','以内','直す','皆様','存知','内容','変わる','授業料','値上がり','吸う','合格','望む','病気','治す','罹る',
                 '場合','連絡','次','修正','発売','雪','転ぶ','注意','意向形','会社','吠える','乗る','閉める','動作','靴','噛む','風呂','熱','弟','誕生',
                 '悪い','減る','金魚','間に合う','準備','折り紙図','折る','習う','向こう','輸出','安い','安売り','空く','店','客','女性','息子','遊ぶ','知る','勉強',
-                '難しい','昼','時間','読める','漢字','働く','体','壊す','忙しい','家族','感する','問題','意見','関係','農業','論文','文化','受験','天気予報','晴れる',
+                '難しい','昼','時間','読める','漢字','働く','体','壊す','忙しい','家族','関する','問題','意見','関係','農業','論文','文化','受験','天気予報','晴れる',
                 '地震','速報','震度','努力','克服','考える','台風','屋根','飛ばす','解決'
             ];
             var para=document.querySelector('p');
