--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
                 '場合','連絡','次','修正','発売','雪','転ぶ','注意','意向形','会社','吼える','乗る','閉める','動作','靴','噛む','風呂','熱','弟','誕生',
                 '悪い','減る','金魚','間に合う','準備','折り紙図','折る','習う','向こう','輸出','安い','安売り','空く','店','客','女性','息子','遊ぶ','知る','勉強',
                 '難しい','昼','時間','読める','漢字','働く','体','壊す','忙しい','家族','関する','問題','意見','関係','農業','論文','文化','受験','天気予報','晴れる',
-                '地震','速報','震度','努力','克服','考える','台風','屋根','飛ばす','解決'
+                '地震','速報','震度','努力','克服','考える','台風','屋根','飛ばす','解決',
+                '新聞','記事','伝える','市民','町','被害者','被害','広い',
+                '歴史','暑い','甘い','同じ','持つ','待つ','命','大切',
+                '教える','悲しい','弱い','痛い','真剣','戦争','終わる','苦しい',
+                '状態','質問','入院','事実','','','','',
+                '','','','','','','','',
             ];
             var para=document.querySelector('p');
             para.innerHTML=word[Math.floor(Math.random()*word.length)];
