--- a/index.html
+++ b/index.html
@@ -49,8 +49,14 @@
                 '新聞','記事','伝える','市民','町','被害者','被害','広い',
                 '歴史','暑い','甘い','同じ','持つ','待つ','命','大切',
                 '教える','悲しい','弱い','痛い','真剣','戦争','終わる','苦しい',
-                '状態','質問','入院','事実','','','','',
-                '','','','','','','','',
+                '状態','質問','入院','事実','愛情','国語','会員','楽器',
+                '無料','野球','盛ん','短い','各駅','停車','図書館','返す',
+                '帰国','驚く','遅刻','禁煙','日本的','興味','冗談','年中無休',
+                '畳む','掃除','走る','涼しい','寒い','京都','お寺','有名',
+                '夏','果物','週末','旅行','温泉','庭','部屋','箱',
+                '代表的','失礼','態度','怒る','富士山','像','動物','頭',
+                '重い','頼む','妻','大家','玄関','自転車','置く',
+                '運転','資料','','','','','','',
             ];
             var para=document.querySelector('p');
             para.innerHTML=word[Math.floor(Math.random()*word.length)];
