--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
                 '夏','果物','週末','旅行','温泉','庭','部屋','箱',
                 '代表的','失礼','態度','怒る','富士山','像','動物','頭',
                 '重い','頼む','妻','大家','玄関','自転車','置く',
-                '運転','資料','','','','','','',
+                '運転','資料','祖父','孫','商品','静か','管理','夜',
+                '騒ぐ','夜遅く','眠い','事故','影響','各線','地域','開放',
+                '全体','辞書','簡単','確かに','不自由','玄関','心配','調べる',
+                '必要','売り切れる','練習','全然','顔色','自信','昨夜','片付ける',
+                '相談','留学','決める','携帯','約束','出発','立場','代表',
+                '試合','女優','綺麗','飛行機','お菓子','お土産','最適','理由',
+                '飼う','責任','飼い主','無断','絶対','時代','通う','普通',
+                '叱る','反対','用事','手紙','散歩','袋'
             ];
             var para=document.querySelector('p');
             para.innerHTML=word[Math.floor(Math.random()*word.length)];
